force-app/main/default/objects/DataCollections__c/DataCollections__c.object-meta.xml
<CustomObject>
    <description>Data Management Data Collection</description>
    <label>Data Collection</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Collections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>