force-app/main/default/objects/DataCollections__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Location (Office ID)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Data_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>