force-app/main/default/objects/DataCollections__c/fields/CheckReq_Contact__c.field-meta.xml
<CustomField>
    <fullName>CheckReq_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Request Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Data Collections (Check Request Contact)</relationshipLabel>
    <relationshipName>Data_Collections1</relationshipName>
    <type>Lookup</type>
</CustomField>