force-app/main/default/objects/DataCollections__c/fields/CountID__c.field-meta.xml
<CustomField>
    <fullName>CountID__c</fullName>
    <formula>TRIM(RIGHT(Account__r.Name,4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count ID</label>
    <type>Text</type>
</CustomField>