force-app/main/default/objects/DataCollections__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASSESSOR DEEDS</fullName>
            </value>
            <value>
                <fullName>AUX</fullName>
            </value>
            <value>
                <fullName>CAMA</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>CORE FINAL</fullName>
            </value>
            <value>
                <fullName>CORE PRELIM</fullName>
            </value>
            <value>
                <fullName>DEED</fullName>
            </value>
            <value>
                <fullName>HISTORICAL DIST</fullName>
            </value>
            <value>
                <fullName>ISSUES</fullName>
            </value>
            <value>
                <fullName>TAX RATES</fullName>
            </value>
            <value>
                <fullName>ZONING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>