force-app/main/default/objects/DataCollections__c/fields/DC_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>DC_Current_Year__c</fullName>
    <formula>TEXT(YEAR(Request_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Current Year</label>
    <type>Text</type>
</CustomField>