force-app/main/default/objects/DataCollections__c/fields/File_Ext_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Ext_Type__c</fullName>
    <description>File Type</description>
    <formula>IF(FIND(&quot;.&quot;, File_Name__c)&gt;0, UPPER(RIGHT(File_Name__c, (LEN(File_Name__c)-FIND(&quot;.&quot;, File_Name__c)))), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Type</label>
    <type>Text</type>
</CustomField>