force-app/main/default/objects/DataCollections__c/fields/GL__c.field-meta.xml
<CustomField>
    <fullName>GL__c</fullName>
    <formula>&quot;51135-03210&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL#</label>
    <type>Text</type>
</CustomField>