force-app/main/default/objects/DataCollections__c/fields/Payment_is_for__c.field-meta.xml
<CustomField>
    <fullName>Payment_is_for__c</fullName>
    <label>Payment is for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aux</fullName>
            </value>
            <value>
                <fullName>CAMA</fullName>
            </value>
            <value>
                <fullName>Core – Final</fullName>
            </value>
            <value>
                <fullName>Core – Prelim</fullName>
            </value>
            <value>
                <fullName>Deed</fullName>
            </value>
            <value>
                <fullName>Tax Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>