force-app/main/default/objects/DataCollections__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <formula>TEXT(Contact_ID__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>