force-app/main/default/objects/DataCollections__c/fields/Source_Media__c.field-meta.xml
<CustomField>
    <fullName>Source_Media__c</fullName>
    <label>Source Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>Email Attachment</fullName>
            </value>
            <value>
                <fullName>Email Zip File</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>County Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>