force-app/main/default/objects/DataCollections__c/fields/Tax_Rate_Require_Collection__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Require_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Rate Require Collection</label>
    <type>Checkbox</type>
</CustomField>