force-app/main/default/objects/DataCollections__c/validationRules/Amount_is_required_for_Check_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_is_required_for_Check_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Date__c)), ISBLANK(Amount__c))</errorConditionFormula>
    <errorMessage>Amount is required for check request.</errorMessage>
</ValidationRule>