force-app/main/default/objects/DataCollections__c/validationRules/Contact_is_required_for_Check_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_is_required_for_Check_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Date__c)), ISBLANK(CheckReq_Contact__c))</errorConditionFormula>
    <errorMessage>Check Request Contact is required</errorMessage>
</ValidationRule>