force-app/main/default/objects/DataCollections__c/validationRules/Log_Date_is_older_then_Request_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Log_Date_is_older_then_Request_date</fullName>
    <active>true</active>
    <description>Log Date isolder then Request Date</description>
    <errorConditionFormula>Log_Date__c  &lt;  Request_Date__c</errorConditionFormula>
    <errorMessage>Log Date must be older than Request Date</errorMessage>
</ValidationRule>