force-app/main/default/objects/DataCollections__c/validationRules/LogDate_cannot_be_less_than_RecDate.validationRule-meta.xml
<ValidationRule>
    <fullName>LogDate_cannot_be_less_than_RecDate</fullName>
    <active>true</active>
    <description>Log Date cannot be less than Received Date</description>
    <errorConditionFormula>Log_Date__c &lt; Received_Date__c</errorConditionFormula>
    <errorDisplayField>Log_Date__c</errorDisplayField>
    <errorMessage>Log Date cannot be less than Received Date</errorMessage>
</ValidationRule>