force-app/main/default/objects/DataCollections__c/validationRules/Payment_is_required_for_Check_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_is_required_for_Check_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Date__c)), ISBLANK(Payment_is_for__c))</errorConditionFormula>
    <errorMessage>&apos;Payment for&apos; is required for check request.</errorMessage>
</ValidationRule>