force-app/main/default/objects/DataCollections__c/validationRules/RecDate_cannot_be_earlier_than_ReqDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RecDate_cannot_be_earlier_than_ReqDate</fullName>
    <active>true</active>
    <description>Received Date cannot be earlier than the Requested Date</description>
    <errorConditionFormula>Received_Date__c  &lt; Request_Date__c</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>Received Date cannot be earlier than the Requested Date.</errorMessage>
</ValidationRule>