force-app/main/default/objects/DataCollections__c/listViews/Gail_s_view_of_data_collections.listView-meta.xml
<ListView>
    <fullName>Gail_s_view_of_data_collections</fullName>
    <columns>NAME</columns>
    <columns>Data_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Ext_Type__c</columns>
    <columns>Received_Date__c</columns>
    <columns>Log_Date__c</columns>
    <columns>Request_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Gail&apos;s view of data collections</label>
</ListView>